--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - master  # 当代码推送到 master 分支时触发
+    tags:
+      - 'v*'    # 当推送 v 开头的 tag 时触发 (例如 v1.0.0)
+
+permissions:
+  contents: write # 允许 workflow 创建 Release
 
 jobs:
   build:
@@ -19,6 +24,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.25.1'  # 指定 Go 版本
+
+      # 创建构建目录
+      - name: Create build directory
+        run: mkdir -p build_artifacts
 
       # 构建 Linux 版本
       - name: Build Linux
@@ -46,3 +55,13 @@ jobs:
         with:
           name: openmcp-gateway-binaries
           path: build_artifacts/*
+
+      # 发布 Release
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: build_artifacts/*
+          draft: false
+          prerelease: false
+          generate_release_notes: true
