--- a/config-exaple.yml
+++ b/config-exaple.yml
@@ -2,12 +2,13 @@ server:
   listen-address: 0.0.0.0:9000
 
 database:
-  username: your_db_username
-  password: your_db_password
-  database: your_database_name
-  address: your_database_address
-  port: 21024
-  use-tls: false
+  type: sqlite
+  database: dev.db
+  # username: your_db_username
+  # password: your_db_password
+  # address: your_database_address
+  # port: 21024
+  # use-tls: false
 
 auth:
   jwt-key: "your_jwt_key"
